<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/menu_group_info"
            android:icon="@drawable/ic_people_white_24dp"
            android:title="@string/drawer_group_info"/>
    <item
            android:id="@+id/menu_delete_group"
            android:icon="@drawable/ic_delete_forever_white"
            android:title="@string/drawer_delete_group"/>
    <item
            android:id="@+id/menu_block_group"
            android:icon="@drawable/ic_block_white"
            android:title="@string/drawer_block_group"/>
    <item
            android:id="@+id/menu_delete_conversation"
            android:icon="@drawable/ic_delete_white"
            android:title="@string/drawer_delete_conversation"/>

</menu>