<?xml version="1.0" encoding="utf-8"?>
<menu
        xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/transfer_details"
        android:title="@string/context_menu_transfer_details"
        android:icon="@drawable/ic_launcher"/>
    <item
        android:id="@+id/retry_transfer"
        android:title="@string/context_menu_retry_transfer"
        android:icon="@drawable/ic_launcher"
        android:visible="false"/>
    <item
        android:id="@+id/cancel_transfer"
        android:title="@string/context_menu_cancel_transfer"
        android:icon="@drawable/ic_launcher"
        android:visible="false"/>
    <item
        android:id="@+id/delete_transfer"
        android:title="@string/context_menu_delete_transfer"
        android:icon="@drawable/ic_launcher"
        android:visible="false"/>

</menu>