<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:gravity="center">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/update_phone_title"
            android:id="@+id/update_phone_page_title"
            android:layout_gravity="end"
            android:layout_marginBottom="24dp"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/update_phone_phone_field"
            android:layout_gravity="center_horizontal"
            android:hint="@string/registration_phone_hint"/>
    <android.support.v7.widget.AppCompatButton
            android:id="@+id/update_phone_submit_btn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:text="@string/update_button"/>

    <TextView android:id="@+id/update_phone_verify_link"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:layout_marginBottom="24dp"
              android:text="@string/update_phone_sms_received_link"
              android:gravity="center"
              android:textSize="16sp"/>

    <TextView android:id="@+id/update_phone_login_link"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:layout_marginBottom="24dp"
              android:text="@string/update_phone_back_to_login"
              android:gravity="center"
              android:textSize="16sp"/>
</LinearLayout>
