<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/upload_dialog_root"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:text="@string/upload_file_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:id="@+id/textView3"/>
        <Button
                android:text="@string/browse_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/upload_file_browse_btn"
                android:layout_gravity="center_horizontal"/>
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:id="@+id/file_information">

        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/upload_file_name_hint"
                android:id="@+id/upload_file_name_update"/>

        <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/upload_file_directory_hint"
                android:text="/"
                android:id="@+id/upload_directory_update"/>

    </LinearLayout>
</LinearLayout>