<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_vertical|center_horizontal"
        android:padding="16dp">
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="none">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/forgot_password_confirm_text"/>

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/forgot_password_confirm_text_two"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/forgot_password_phone_verification"
                    android:paddingTop="16dp">
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/forgot_password_sms_title"/>

                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:ems="10"
                        android:id="@+id/forgot_password_sms_code"
                        android:layout_gravity="center_horizontal"
                        android:hint="@string/forgot_password_sms_hint"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="15dp"/>

                <android.support.v7.widget.AppCompatButton
                        android:id="@+id/forgot_password_submit_sms_code"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:layout_marginBottom="24dp"
                        android:padding="12dp"
                        android:text="@string/submit_button"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:id="@+id/forgot_password_email_verification"
                    android:paddingTop="16dp">
                <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/forgot_password_email_title"/>

                <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:ems="10"
                        android:id="@+id/forgot_password_email_code"
                        android:layout_gravity="center_horizontal"
                        android:hint="@string/forgot_password_email_hint"
                        android:layout_marginTop="15dp"
                        android:layout_marginBottom="15dp"/>

                <android.support.v7.widget.AppCompatButton
                        android:id="@+id/forgot_password_submit_email_code"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="24dp"
                        android:layout_marginBottom="24dp"
                        android:padding="12dp"
                        android:text="@string/submit_button"/>
            </LinearLayout>

            <TextView android:id="@+id/back_to_login"
                      android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginBottom="24dp"
                      android:text="@string/forgot_password_back_to_login"
                      android:gravity="center"
                      android:textSize="16sp"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>